EE-1350: Section 508 Interactive Maps * Adds logic to correctly load maps that meet filter criteria * Sets only the first few thumbnails that can fit in the visible carousel to "active" * Sets display: none on the other thumbnails to avoid keyboard control * Resolved resizing issues with previous, next arrows not showing due to only a couple items visible * Cached variables used more than once

--- a/drupal/sites/all/modules/custom/features/my_maps_view/css/MyMaps.css
+++ b/drupal/sites/all/modules/custom/features/my_maps_view/css/MyMaps.css
@@ -42,7 +42,8 @@
     padding: 5px;
 }
 
-.jcarousel li.load-thumbnail {
+.jcarousel li.load-thumbnail,
+.jcarousel li.hide-thumbnail {
     display: none;
 }
 .jcarousel li.load-thumbnail.active {
